prototype of basic editing is working now

--- a/PersonalPage_test/Page_Client/public/src/index.html
+++ b/PersonalPage_test/Page_Client/public/src/index.html
@@ -3,17 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-    <link rel="stylesheet" href="jacob.css" type="text/css" />
+    <link rel="stylesheet" href="css/jemdoc.css" type="text/css" />
+    <link rel="stylesheet" href="css/jacob.css" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
-    <script src="page.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="app/js/page.js"></script>
     <title>George Gregory</title>
     <script type="text/javascript">
 
     </script>
 </head>
-<body ng-app="page">
+<body ng-app="page" ng-controller="PageCtrl">
 <table summary="Table for page layout." id="tlayout">
     <tr valign="top">
         <td id="layout-menu">
