--- a/PersonalPage_test/Page_Client/public/src/index.html
+++ b/PersonalPage_test/Page_Client/public/src/index.html
@@ -5,16 +5,27 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" href="css/jemdoc.css" type="text/css" />
     <link rel="stylesheet" href="css/jacob.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-sanitize.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
+    <script type="text/x-mathjax-config">
+            MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
+    <script type="text/javascript"
+            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+
+
     <script src="app/js/page.js"></script>
     <title>George Gregory</title>
     <script type="text/javascript">
 
     </script>
 </head>
-<body ng-app="page" ng-controller="PageCtrl">
+<body ng-app="page">
 <table summary="Table for page layout." id="tlayout">
     <tr valign="top">
         <td id="layout-menu">
@@ -33,7 +44,6 @@
                 <div id="subtitle"><a href="http://blog.gregory2000.com">George Gregory</a> (<a href="mailto:george@gregory2000.com">george@gregory2000.com</a>)</div>
             </div>
 
-            <h2>Dynamic Content</h2>
 
             <div class="viewContent" ng-view></div>
 
