--- a/PersonalPage_test/Page_Client/public/testapp_editable/index.html
+++ b/PersonalPage_test/Page_Client/public/testapp_editable/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-        "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" href="css/jemdoc.css" type="text/css" />
@@ -13,10 +12,12 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-sanitize.js"></script>
 
+
     <!--<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>-->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
 
     <!-- include (codemirror.css, codemirror.js, xml.js, formatting.js) -->
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.min.css" />
@@ -28,8 +29,10 @@
     <!-- add summernote -->
     <link href="http://hackerwins.github.io/summernote/summernote-dist/summernote.css" rel="stylesheet">
     <script src="http://hackerwins.github.io/summernote/summernote-dist/summernote.min.js"></script>
-    <script src="vendor/angular-summernote.js"></script>
+    <script src="vendor/angular-summernote-0.1.0.min.js"></script>
 
+    <!-- add user custom -->
+    <!--<link href="http://hackerwins.github.io/summernote/page.css" rel="stylesheet">-->
 
     <script type="text/x-mathjax-config">
             MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
@@ -39,11 +42,9 @@
     </script>
 
 
-    <script src="app/js/page.js"></script>
+    <script src="js/page.js"></script>
     <title>George Gregory</title>
-    <script type="text/javascript">
 
-    </script>
 </head>
 <body ng-app="page">
 <table summary="Table for page layout." id="tlayout">
@@ -51,8 +52,8 @@
         <td id="layout-menu">
             <div class="menu-category">George Gregory</div>
             <div class="menu-item"><a href="#Home" class="current">Home</a></div>
-            <div class="menu-item"><a href="#Projects">Projects</a></div>
-            <div class="menu-item"><a href="#Interests">Interests</a></div>
+            <div class="menu-item"><a href="#Career">Career</a></div>
+            <div class="menu-item"><a href="#Bio">Bio</a></div>
             <div class="menu-item"><a href="#Contact">Contact</a></div>
             <div class="menu-category">Class Projects</div>
             <div class="menu-item"><a href="#CS224N">CS224N</a></div>
@@ -64,6 +65,12 @@
                 <div id="subtitle"><a href="http://blog.gregory2000.com">George Gregory</a> (<a href="mailto:george@gregory2000.com">george@gregory2000.com</a>)</div>
             </div>
 
+            <div summernote>Hello Summernote</div>
+
+            <br/>
+            <br/>
+
+
             <div class="viewContent" ng-view></div>
 
             <div id="footer">
@@ -74,5 +81,14 @@
         </td>
     </tr>
 </table>
+<!--
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#summernote').summernote({height: 300, codemirror: {
+            theme: 'monokai'}
+        });
+    });
+</script>
+-->
 </body>
 </html>
