- Moved the nav sections to a service as recommended by Angular. - Started writing a directive for making the navigational section, editable - sortable and locked. -- But the editable is achieved using contenteditable and not input, which results in model not getting updated! -- Dynamically adding a directive to a node also to be played with to understand how to execute ui-sortable.

--- a/SPAHomePage/app/index.html
+++ b/SPAHomePage/app/index.html
@@ -13,17 +13,18 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-sortable.js"></script>
+    <script src="lib/angular/angular-resource.js"></script>
 
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
 </head>
 <body>
     <div class="row-fluid">
-        <div id="layout-menu" class="span2" ng-controller="navigationCtrl"
-             ui-sortable="sortableOptions" ng-model="navSections" class="list">
-            <div ng-repeat="section in navSections" class="menu-category">
-                {{section}}
-            </div>
-        </div>
+        <sh-nav-menu id="layout-menu" class="list span2"  
+                     ng-controller="navigationCtrl" 
+                     ng-model="navSections">
+
+        </sh-nav-menu>
         <div class="span10">
 
         </div>
