Including support for adding a new segment and idnenting them, and sorting the menu-items. TODO Edit after creation

--- a/SPAHomePage/app/index.html
+++ b/SPAHomePage/app/index.html
@@ -20,11 +20,10 @@
 </head>
 <body>
     <div class="row-fluid">
-        <sh-nav-menu id="layout-menu" class="list span2"  
-                     ng-controller="navigationCtrl" 
-                     ng-model="navSections">
+        <nav-menu id="layout-menu" class="list span2"  
+                     ng-controller="navigationCtrl">
 
-        </sh-nav-menu>
+        </nav-menu>
         <div class="span10">
 
         </div>
