--- a/SPAHomePage/app/index.html
+++ b/SPAHomePage/app/index.html
@@ -16,6 +16,7 @@
     <script src="lib/angular/angular-resource.js"></script>
 
     <script src="js/app.js"></script>
+    <script src="js/lib.js"></script>
 </head>
 <body>
     <div class="row-fluid">
