Adding support for autopopulating using github handle.
Needs more work.
- Dedup added sections populated from github
- Work out how to move "+Add section" to the bottom
- Clear up navigation after submit of handle.

--- a/SPAHomePage/app/admin-partials/editable-menu-item.html
+++ b/SPAHomePage/app/admin-partials/editable-menu-item.html
@@ -1,4 +1,4 @@
-﻿<a ng-hide="section.editable" ng-href="{{section.link}}" ng-click="inPlaceEdit($index)">{{section.label}}</a>
+﻿<a ng-hide="section.editable" ng-href="{{section.link}}" ng-click="inPlaceEdit($index, $event)">{{section.label}}</a>
 <div ng-show="section.editable">
     <form ng-submit="updateSection($index, $event)">
         <input class="input-block-level" type="text" ng-model="section.label" />
