--- a/SPAHomePage/app/index.html
+++ b/SPAHomePage/app/index.html
@@ -5,28 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build your SPA home page</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/jemdoc.css">
 
-    <script src="lib/jquery/jquery-1.10.2.js"></script>
-    <script src="lib/jquery/jquery-ui.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+
+    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/jemdoc.css">
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-sortable.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
+    <script src="lib/angular/angular-route.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/lib.js"></script>
 </head>
 <body>
-    <div class="row-fluid">
-        <nav-menu id="layout-menu" class="list span2"  
-                     ng-controller="navigationCtrl">
-
-        </nav-menu>
-        <div class="span10">
-
-        </div>
-    </div>
+    <div ng-view></div>
 </body>
 </html>
