--- a/PersonalPage_test/Page_Client/public/src/index.html
+++ b/PersonalPage_test/Page_Client/public/src/index.html
@@ -7,27 +7,25 @@
     <link rel="stylesheet" href="css/jacob.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-sanitize.js"></script>
+    <script src="vendor/angular.js"></script>
+    <script src="vendor/angular-route.js"></script>
+    <script src="vendor/angular-sanitize.js"></script>
 
-    <!--<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>-->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <link href="vendor/bootstrap.min.css" rel="stylesheet">
+    <script src="vendor/bootstrap.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- include (codemirror.css, codemirror.js, xml.js, formatting.js) -->
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.min.css" />
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/theme/monokai.min.css">
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/mode/xml/xml.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/2.36.0/formatting.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.min.css" />    <link rel="stylesheet" type="text/css" href="vendor/monokai.min.css">
+    <script type="text/javascript" src="vendor/codemirror.min.js"></script>
+    <script type="text/javascript" src="vendor/xml.min.js"></script>
+    <script type="text/javascript" src="vendor/formatting.min.js"></script>
 
     <!-- add summernote -->
-    <link href="http://hackerwins.github.io/summernote/summernote-dist/summernote.css" rel="stylesheet">
-    <script src="http://hackerwins.github.io/summernote/summernote-dist/summernote.min.js"></script>
+    <link href="vendor/summernote.css" rel="stylesheet">
+    <script src="vendor/summernote.min.js"></script>
     <script src="vendor/angular-summernote.js"></script>
 
 
@@ -45,7 +43,7 @@
 
     </script>
 </head>
-<body ng-app="page">
+<body ng-app="page" ng-init="visible = {div: true, edit: false}">
 <table summary="Table for page layout." id="tlayout">
     <tr valign="top">
         <td id="layout-menu">
